# edx-platform

./: . coveragerc  .annotation_safe_list.yml  .babelrc  .bashrc  .commitlintrc.yml  .coveragerc  .coveragerc-local  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .esplint.rec.json  .esplintrc.js  .gcloudignore  .gitattributes  .gitignore  .gitmodules  .hgignore  .importlinter  .isort.cfg  .jshintignore  .jshintrc  .nojekyll  .npmrc  .pep8  .pii_annotations.yml  .pre-commit-config.yaml  .pylintrc  .qiniu_pythonsdk_hostscache.json  .railwayignore  .readthedocs.yaml  .reviewboardrc  .ruby-gemset  .ruby-version  .rvmrc  .stylelintignore  .transifexrc  .travis.yml  (+276 more)
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue_template.md  pull_request_template.md  renovate.json  renovate.json5
.redcar/: lucene_last_updated  tags  tags.REMOVED.git-id
.travis/: docker.mk
.tx/: config
_mac/: git.xml  keymap.xml
_sources/: index.txt
_static/: sphinxdoc.css
ace_messages/: 25.20211029-180416.html  5185452.20211108-043037.html  5185452.20211109-134054.html
adg_pipelines/: .coveragerc-adg  skip_tests.py
auth/: models.py  views.py
cache_toolbox/: core.py  model.py  relation.py
ci/: build.sh  ci.mk  clean_tests.sh  deploy-stage.groovy  deploy.groovy  docker-compose-template.yml  run_tests.sh  test.groovy
circuit/: models.py  views.py
cms/: .coveragerc  CHANGELOG.md  README.rst  __init__.py  celery.py  conftest.py  devstack.yml  docker_cms_gunicorn.py  manage.py  one_time_startup.py  pydev_manage.py  pytest.ini  spectacular.py  startup.py  tests.py  urls.py  urls_dev.py  views.py  wsgi.py  xmodule_namespace.py
common/: .gitignore  README.rst  mysql_cron_scheduler.py  xml_cleanup.py
conf/: gunicorn_cms.conf.py  gunicorn_lms.conf.py
course about page/: aboutpage.rst
course_data_formats/: course_xml.html  custom_response.html  grading.html  symbolic_response.html
courseware/: calc.py  capa_module.py  capa_problem.py  content_parser.py  grades.py  html_module.py  models.py  module_render.py  profile.py  progress.py  schematic_module.py  tests.py  video_module.py  views.py  x_module.py
coverage/: lcov.info  tescov.txt
css/: application.css  application.css.orig  local.css  marketing-ie.css  marketing.css  print.css
django_future/: csrf.py
doc/: README  code_standards.txt  course_grading.md  development.md  discussion.md  instance-proposal.md  mongo.md  overview.md  testing.md  xml-format.md
docs/: .gitignore  Makefile  README.rst  baseconf.py  best_practices.rst  bootstrap.rst  cms_config.ini  common_djangoapps.rst  common_lib.rst  conf.py  config.ini  custom_features_documentation.md  docs_settings.py  guides.rst  index.rst  lms-openapi.yaml  lms_config.ini  pull_request_template.md  redirects.txt  repository_docs.py  require_to_webpack.rst  static_assets.rst  sw2md.py  sw2sphinxopenapi.py  swagger.yaml  testing.rst
edx_custom_registration_form/: admin.py  apps.py  choices.py  forms.py  models.py  tests.py
emails/: email_change.txt
envs/: README.txt  aws.py  common.py  content.py  dev.py  dev_ike.py  devplus.py  logsettings.py  staging.py  static.py  test.py  test_ike.py
es6/: .eslintrc.js  foo.js  test.js
fixtures/: anonymize_fixtures.py  pm.json
gulp/: config.js
i18n/: branch_cleanup.py  config.py  converter.py  dummy.py  execute.py  extract.py  generate.py  googleTranslate.py  logger.py  make_dummy.py  pofile.py  segment.py  transifex.py  update.py  validate.py
import_shims/: README.rst  generate_shims.sh  regenerate_current_shims.sh  warn.py
internal_data_formats/: discussion_data.html  sql_schema.html  tracking_logs.html
jenkins/: acceptance.sh  all-tests.sh  base.sh  quality.sh  test.sh  test_acceptance.sh  test_edge.sh  test_lms.sh
js/: cktsim.js  html5shiv.js  jquery.leanModal.js  jquery.leanModal.min.js  mosfet_amplifier.js  plotter.js  schematic.js  schematic_mosfet.js  video_player.js
lib/: pipeline_mako.py  static_replace.py
lms/: .coveragerc  CHANGELOG.md  README.rst  __init__.py  asgi.py  celery.py  devstack.yml  docker_lms_gunicorn.py  lms.env.json  one_time_startup.py  setup.py  spectacular.py  startup.py  tests.py  urls.py  wsgi.py  wsgi_apache.py  wsgi_apache_lms.py  xmodule_namespace.py
mitxmako/: middleware.py  shortcuts.py
new_xmodule/: sample_course_run.py  sample_xmodules.py  samples.py
numpy-1.6.2/: PKG-INFO
openedx/: README.rst  __init__.py  conf.py
patches/: 0001-Fix-CAPA-Problems.patch  pre-release_1.patch
pavelib/: README.md  __init__.py  acceptance_test.py  assets.py  assets_deprecated.py  bok_choy.py  database.py  devstack.py  dircheck.py  django.py  docs.py  edraak.py  (+18 more)
scripts/user_retirement/: README.rst  entry_points.sh  get_learners_to_retire.py  pytest.ini  replace_usernames.py  retire_one_learner.py  retirement_archive_and_cleanup.py  retirement_bulk_status_update.py  retirement_partner_report.py  setup.cfg
scripts/user_retirement/docs/: driver_setup.rst  extending_retirement.rst  implementation_overview.rst  index.rst  service_setup.rst  special_cases.rst
scripts/user_retirement/docs/decisions/: 0001-extensibility.rst
scripts/user_retirement/requirements/: base.in  base.txt  testing.in  testing.txt
scripts/user_retirement/tests/: mixins.py  retirement_helpers.py  test_get_learners_to_retire.py  test_retire_one_learner.py  test_retirement_archive_and_cleanup.py  test_retirement_bulk_status_update.py  test_retirement_partner_report.py
scripts/user_retirement/tests/test_data/: uploading.txt
scripts/user_retirement/tests/utils/: test_edx_api.py  test_jenkins.py
scripts/user_retirement/tests/utils/thirdparty_apis/: test_amplitude.py  test_braze.py  test_hubspot.py  test_salesforce.py  test_segment_api.py
scripts/user_retirement/utils/: edx_api.py  email_utils.py  exception.py  google_api.py  helpers.py  jenkins.py  tubular_email.py  utils.py
scripts/user_retirement/utils/thirdparty_apis/: amplitude_api.py  braze_api.py  hubspot_api.py  salesforce_api.py  segment_api.py
(+27340 files in other folders)
